public/style.css
#logo {
    width: 59px;
    height: auto;
    float: left;
    position: relative;
    bottom: 10px;
}

#logo_cont {
    height: auto;
    margin-left: 0px;
    margin-bottom: 0px;
    margin-top: 10px;
    display: block;
}

#logo_cont a {display: block;margin: 20px;margin-bottom: 0;}


#satori_logo {
    font-size: 30px;
    background-color: #efefef;
    display: inline;
    color: black;
    font-weight: 600;
    padding: 4px 10px;
    font-family: arial;
}

#satori_logo a {
    color: black;
    text-decoration: none;
}


body {
    background-color: #1a1a1a;
    color: #d7dadc;
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    /* padding-bottom: 110px; */
}

textarea {
    font-family: Arial, sans-serif;
}

.container {
    width: 100%;
    margin: auto;
    padding: 20px;
    /* min-height: 900px; */
}


a:hover {
    text-decoration: none !important;
}

a, p a, .ql-snow a {
    color: white;
    text-decoration: underline;
}

p:first-child {
    margin-top: 5px;
}

h1 {
    color: #ffffff;
    font-size: 24px;
    padding-top: 0 !important;
}

p {
    margin-top: 10px;
    margin-bottom: 10px;
}

ul {
    font-size: 14px;
}

/*
button {
    font-weight: bold;
}
*/


input:focus, textarea:focus, select:focus {
    outline: none;
}


label {
    font-size: 14px;
}

.post {
    background-color: #2d2d2d;
    /* Dark gray background for each post */
    margin-bottom: 5px;
    padding: 5px 15px;
    /* Adds some padding inside each post for spacing */
    border-radius: 5px;
    /* Slightly rounded corners for a modern look */
    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
    /* Subtle shadow for depth */
    transition: background-color 0.3s;
    /* Smooth transition for hover effect */
    float: left;
    clear: both;
    width: 100%;
    min-height: 60px;
    padding-left: 0;
}


.post-left {
    float: left;
    /* Float the left column */
}

.post-content {
    overflow: hidden;
    /* Prevent wrapping around the floated element */
}



/*
.post:hover {
    background-color: #3a3a3a;
}
*/

.post-links {
    margin-top: 3px;
    /* margin-left: 87px; */
    clear: both;
}

.thumbnail {
    width: 70px !important;
    height: 50px;
    background-color: #343536;
    margin-right: 15px;
    float: left;
    margin-top: 4px;
}

.content {
    flex-grow: 1;
    min-height: 50px;
}

#post_title_container {
    padding-top: 10px;
}

.post-title {
    color: #d7dadc;
    font-size: 16px;
    text-decoration: none;
    display: block;
    /* Make the title take its own line */
    /* margin-bottom: 5px; */
    padding-top: 2px;
}

.post-title:hover {
    text-decoration: underline !important;
}

div#post_meta {
    font-size: 12px;
    color: gray;
    position: absolute;
    left: 64px;
}

.post-description {
    color: #818384;
    display: none;
}

.post-links a {
    color: #d7dadc;
    text-decoration: none;
    margin-right: 10px;
    font-size: 12px;
    float: left;
}

.post-links a:hover {
    text-decoration: underline !important;
}

.page-divider {
    background-color: #2b2b2b;
    color: #fff;
    text-align: center;
    font-weight: bold;
    clear: both;
    width: 100%;
    padding: 15px;
    border-radius: 5px;
    margin-top: 20px;
    margin-bottom: 30px;
    display: none;
}

.post-submitted {
    font-size: 12px;
    color: #818384;
    margin: 10px 0;
    padding-top: 3px;
    margin-top: 0;
    margin-bottom: 3px;
}

.post-submitted a {
    color: #8197bf;
    text-decoration: none;
}

.post-submitted a:hover {
    text-decoration: underline !important;
}




/* Voting */


.voting {
    display: inline-flex;
    align-items: center;
    margin-right: 0;
    padding-right: 0;
    float: left;
    min-width: 34px;
}

.votes {
    color: #d7dadc;
    font-size: 14px;
}

.upvote, .downvote {
    color: #d7dadc;
    text-decoration: none;
    cursor: pointer;
}

.upvote:hover, .downvote:hover {
    color: #ff4500;
    /* Or any color to indicate active/hover state */
}

.upvote-active img {
    filter: brightness(0) saturate(100%) invert(46%) sepia(94%) saturate(2094%) hue-rotate(80deg) brightness(102%) contrast(88%);
}

.downvote-active img {
    filter: brightness(0) saturate(100%) invert(20%) sepia(77%) saturate(6349%) hue-rotate(356deg) brightness(103%) contrast(101%);
}





/* Sidebar */

#sidebar_container {
    width: 270px;
    float: right;
}

.sidebar_button {
    width: 100%;
    border: none;
    background-color: #3c3c3c;
    color: #d7dadc;
    padding-top: 10px;
    padding-bottom: 10px;
    cursor: pointer;
    font-size: 14px;
}

.sidebar_button:hover {
    text-decoration: underline;
}

.sidebar ul {
    font-size: 12px;
    margin-left: -10px;
}

.container {
    width: calc(100% - 315px);
    /* Adjust container width to make space for sidebar */
    float: left;
    padding: 20px;
    padding-bottom: 100px;
    padding-top: 0;
    margin-top: 0;
}

.sidebar {
    width: 200px;
    /* Or keep it at 300px if you prefer */
    background-color: #2d2d2d;
    /* Slightly lighter than the body for contrast */
    padding: 20px;
    margin-top: 22px;
    /* Adjusted to position the sidebar */
    float: right;
    /* Float to the right of the container */
    border-radius: 5px;
    margin-right: 20px;
}

/* Login Form */
.login-form {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    /* Full width of the sidebar */
}

.login-form input[type="text"],
.login-form input[type="password"] {
    width: 180px;
    /* Full width of the form */
    padding: 4px;
    margin-bottom: 10px;
    /* Space between fields */
    background-color: #404040;
    /* Dark input fields for the theme */
    border: none;
    /* Slightly lighter border for visibility */
    color: #d7dadc;
    /* Text color similar to body text */
    border-radius: 4px;
    /* Optional: rounded corners */
    padding-left: 10px;
}
/* ... */

